welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:1: error: not found: value methodeAppeleeParLeCompilateur
methodeAppeleeParLeCompilateur() // tout ceci est ignoré
^Source:2: error: not found: value autreAppel
autreAppel() /* Ceci est
^Source:5: error: not found: value encoreUneAutreAppel
encoreUneAutreAppel() 
^